account.deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account
  name: account
  # namespace: he
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: account
  strategy: {}
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: account
          image: dttr278/dev:hne-node-account-service-v2.1.11
          # imagePullPolicy: "Always"
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "0.25Gi"
              cpu: "250m"
            limits:
              memory: "0.25Gi"
              cpu: "250m"
      imagePullSecrets:
        - name: dockerio-secret
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: account-service
  namespace: he
spec:
  selector:
    app: account
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
