deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: station
  name: station
  namespace: he-station
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: station
  strategy: {}
  template:
    metadata:
      labels:
        app: station
    spec:
      containers:
        - name: station
          image: dttr278/dev:hne-station-0.0.5
          # imagePullPolicy: "Always"
          # livenessProbe:
          #   httpGet:
          #     path: /health/liveness
          #     port: 3000
          #   initialDelaySeconds: 3
          #   periodSeconds: 3
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '0.25Gi'
              cpu: '250m'
            limits:
              memory: '0.3Gi'
              cpu: '300m'
      imagePullSecrets:
        - name: dockerio-secret
      restartPolicy: Always


---
apiVersion: v1
kind: Service
metadata:
  name: station-service
  namespace: he-station
spec:
  selector:
    app: station
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
